# zstatus

./: CMakeLists.txt  readme.md  toto  zstatus-cmd  zstatus-cmd.tcl  zstatus-exec  zstatus-exec.tcl  zstatus-send.tcl  zstatus.tk
man/: zstatus.1  zwm.1
modules/config/: CMakeLists.txt  config.tcl  pkgIndex.tcl
modules/desktop/: CMakeLists.txt  desktop.tcl  pkgIndex.tcl
modules/devices/: CMakeLists.txt  devices.tcl  devices.tk  pkgIndex.tcl
modules/mail/: CMakeLists.txt  mail.tcl  mail.tk  pkgIndex.tcl
modules/metar/: CMakeLists.txt  metar.tcl  metar.tk  metar_decode.tcl  metar_thread.tcl  pkgIndex.tcl
modules/music/: CMakeLists.txt  music.tcl  music.tk  pkgIndex.tcl
modules/music/src/: init.c  mpd.c  mpd.h
modules/remixicon/: CMakeLists.txt  pkgIndex.tcl  remixicon.tcl
modules/symbols/: CMakeLists.txt  pkgIndex.tcl  symbols.tcl
modules/system/: CMakeLists.txt  pkgIndex.tcl  system.tcl
modules/system/src/: config.h.in  freebsd.c  freebsd.c.bak  freebsd.h  init.c
modules/workspace/: CMakeLists.txt  pkgIndex.tcl  workspace.tcl
modules/zwm/: CMakeLists.txt  pkgIndex.tcl  zwm.tcl
modules/zwm/src/: init.c  x11.c  x11.h
tools/: make_remixmap.tcl
